# deepin-wm-switcher

./: .gitignore  CHANGELOG.md  CMakeLists.txt  HACKING.md  README.md  config.h.in
debian/: changelog  control  copyright  rules
src/: CMakeLists.txt  config_manager.cpp  config_manager.h  main.cpp
